# UrzisoftProjectMC

./: README.md
BattleCity/: BattleCity.sln
BattleCity/BattleCity/: Axis.cpp  Axis.h  BattleCity.vcxproj  BattleCity.vcxproj.filters  Bomb.cpp  Bomb.h  Bullet.cpp  Bullet.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  Map.h  Map2.txt  Map7.txt  Map9.txt  MatrixClient.cpp  MatrixClient.h  Player.cpp  Player.h  PlayerDatabase.cpp  PlayerDatabase.h  Road.cpp  Road.h  Tank.cpp  Tank.h  Utilities.h  Vehicle.cpp  Vehicle.h  Wall.cpp  Wall.cppm  Wall.h  axis.cppm  encoded_map.txt  main.cpp  map.cpp  map.cppm
Client/: CMakeLists.txt
ClientMC/: ClientMC.sln
ClientMC/ClientMC/: ClientMC.cpp  ClientMC.h  ClientMC.qrc  ClientMC.ui  ClientMC.vcxproj  ClientMC.vcxproj.filters  GameWindow.cpp  GameWindow.h  LeaderboardDisplay.cpp  LeaderboardDisplay.h  Login.cpp  Login.h  MovementDisplay.cpp  MovementInfoDisplay.h  main.cpp  resource.qrc
ClientMC/ClientMC/resources/maps/: Map1.txt  Map10.txt  Map3.txt  Map4.txt  Map5.txt  Map8.txt  encoded_map.txt
InputHandler/InpuHandler/: InpuHandler.sln
InputHandler/InpuHandler/InpuHandler/: InpuHandler.vcxproj  InpuHandler.vcxproj.filters  InputHandler.cpp  InputHandler.h
Project1/: Project1.sln
Project1/Project1/: Project1.vcxproj  Source.cpp
Project2/: Project2.sln
Project2/Project2/: Project2.vcxproj  Project2.vcxproj.filters  Source.cpp
QtWidgetsApplication/: QtWidgetsApplication.sln
QtWidgetsApplication/QtWidgetsApplication/: GameWidget.cpp  GameWidget.h  QtWidgetsApplication.vcxproj  QtWidgetsApplication.vcxproj.filters  main.cpp
